--- a/docsets/Vagrant.docset/Contents/Info.plist
+++ b/docsets/Vagrant.docset/Contents/Info.plist
@@ -3,12 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>Vagrant</string>
+	<string>Vagrant 2</string>
 	<key>CFBundleName</key>
-	<string>Vagrant</string>
+	<string>Vagrant 2</string>
 	<key>DocSetPlatformFamily</key>
-	<string>Vagrant</string>
+	<string>Vagrant 2</string>
 	<key>isDashDocset</key>
 	<true/>
+    <key>dashIndexFilePath</key>
+    <string>index.html</string>
+    <key>DashDocSetFamily</key>
+    <string>dashtoc</string>
 </dict>
 </plist>
